content: update now page

--- a/content/now/2025-07-07.md
+++ b/content/now/2025-07-07.md
@@ -6,4 +6,4 @@ publishedAt: "2025-07-07T20:43:56+10:00"
 - 比之前提前 40 分钟到办公室，提前 40 分钟回家，这样上班下班的路上天都是亮的，下班冲回家可以打游戏
 - 开始研究桌游，最近非常喜欢 Catan，因此为了组局，跟之前不常联系的朋友联系上了，甚至觉得自己变 E 了
 - 入坑《文明 6》，非常认真地在学习文明百科，学院派路线
-- 小红书上一 ​​​
+- 小红书上一半以上都是桌游（主要是 Catan）和文明
